# PropR

./: .dockerignore  .envrc  .gitignore  .travis.yml  CONTRIBUTING.md  DesignNotes.md  Dockerfile  Endemic.cabal  HenProg.cabal  LICENSE  NOTES.md  PropR.cabal  README.md  cabal.project  docker-compose.yaml  entrypoint.sh  ghc-synth.cabal  ghc-synth.nix  hie.yaml  out-2h-d2.txt  out-2holes-depth2.txt  out-2holes-depth3.txt  shell.nix
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build-test-deploy.yml  docker.yml  haskell.yml
check-helpers/: LICENSE  check-helpers.cabal
check-helpers/Check/: Helpers.hs
examples/: BrokenGCD.hs  BrokenModule.hs  FourFixes.hs  MagicConstant.hs  Tests.hs  docker-compose.yaml
resources/: big_sample_config.json  docker_config.json  exhaustive_search_config.json  random_search_config.json  sample_config.json  test_config.json
src/: Endemic.hs  Main.hs  PropR.hs
src/Endemic/: Check.hs  Configuration.hs  Diff.hs  Eval.hs  Packages.hs  Plugin.hs  Repair.hs  Search.hs  Traversals.hs  Types.hs  Util.hs
src/Endemic/Configuration/: Configure.hs  Materializeable.hs  Types.hs
src/Endemic/Search/: Class.hs  Exhaustive.hs  Genetic.hs  PseudoGenetic.hs  Random.hs
src/Endemic/Search/Exhaustive/: Configuration.hs  Search.hs
src/Endemic/Search/Genetic/: Configuration.hs  GenMonad.hs  Search.hs  Types.hs  Utils.hs
src/Endemic/Search/PseudoGenetic/: Configuration.hs  Search.hs
src/Endemic/Search/Random/: Configuration.hs  Search.hs
src/PropR/: Check.hs  Configuration.hs  Diff.hs  Eval.hs  Packages.hs  Plugin.hs  Repair.hs  Search.hs  Traversals.hs  Types.hs  Util.hs
src/PropR/Check/: Helpers.hs
src/PropR/Configuration/: Configure.hs  Materializeable.hs  Types.hs
src/PropR/Search/: Class.hs  Exhaustive.hs  Genetic.hs  PseudoGenetic.hs  Random.hs
src/PropR/Search/Exhaustive/: Configuration.hs  Search.hs
src/PropR/Search/Genetic/: Configuration.hs  GenMonad.hs  Search.hs  Types.hs  Utils.hs
src/PropR/Search/PseudoGenetic/: Configuration.hs  Search.hs
src/PropR/Search/Random/: Configuration.hs  Search.hs
src/Synth/: Check.hs  Diff.hs  Eval.hs  Fill.hs  Flatten.hs  Gen.hs  Gen2.hs  Plugin.hs  Repair.hs  Replace.hs  Sanctify.hs  Traversals.hs  Types.hs  Util.hs
tests/: Benchmarks.hs  BrokenGCD.hs  SlowTests.hs  TestUtils.hs  Tests.hs  ThreeFixes.hs  VerySlowTests.hs
tests/cases/: AllPropsPass.hs  AmbiguousTypeVariables.hs  BrokenGCD.hs  BrokenModule.hs  Data.hs  DefaultingFixes.hs  Dependency.hs  DoubleDecl.hs  ExprWhere.hs  FourFixes.hs  Issue87.hs  Issue88.hs  LoopBreaker.hs  MagicConstant.hs  Multi.hs  NoProps.hs  Operators.hs  PrelOverwriteExports.hs  PreludeOverwrite.hs  PreludeOverwriteImports.hs  SimpleRefinement.hs  TastyFix.hs  TastyMix.hs  TastyTwoFix.hs  ThreeFixes.hs  TwoFixes.hs  UsesDependency.hs  Wrap.hs  mainMod.hs  unnamed.hs
