cabal-version: 3.8
name: PropR
build-type: Simple
version: 1.0.0
author: Matthías Páll Gissurarson
maintainer: mpg@mpg.is
synopsis: synthtest
description: Program repair using GHC, HPC tracing and typed-hole synthesis.

category: Compiler Plugin
license: MIT
license-file: LICENSE
data-files: src/PropR/Check/Helpers.hs


library
  default-language: GHC2021
  ghc-options: -O2
  hs-source-dirs: src/
  exposed-modules: PropR
                   PropR.Configuration
                   PropR.Eval
                   PropR.Plugin
                   PropR.Repair
                   PropR.Check
                   PropR.Traversals
                   PropR.Types
                   PropR.Diff
                   PropR.Util
                   PropR.Search
                   PropR.Search.PseudoGenetic
                   PropR.Search.Genetic
                   PropR.Search.Random
                   PropR.Search.Exhaustive
                   PropR.Packages
                   PropR.Check.Helpers
  other-modules: PropR.Configuration.Configure
                 PropR.Configuration.Types
                 PropR.Configuration.Materializeable
                 PropR.Search.Class
                 PropR.Search.Genetic.Configuration
                 PropR.Search.Genetic.GenMonad
                 PropR.Search.Genetic.Search
                 PropR.Search.Genetic.Types
                 PropR.Search.Genetic.Utils
                 PropR.Search.PseudoGenetic.Configuration
                 PropR.Search.PseudoGenetic.Search
                 PropR.Search.Random.Configuration
                 PropR.Search.Random.Search
                 PropR.Search.Exhaustive.Configuration
                 PropR.Search.Exhaustive.Search
                 Paths_PropR
  reexported-modules: Test.QuickCheck,
                      Test.QuickCheck.Random,
                      Test.Tasty,
                      Test.Tasty.Runners,
                      Test.Tasty.Ingredients

  build-depends: base >= 4 && < 5,
                 ghc >= 9,
                 ghc-boot >= 9,
                 ghc-paths >= 0.1,
                 ghc-prim >= 0.10,
                 bytestring >= 0.11,
                 Cabal >= 3.8,
                 hpc >= 0.6,
                 time >= 1.12,
                 directory >= 1.3,
                 filepath >= 1.4,
                 process >= 1.6,
                 containers >= 0.6,
                 unix >= 2.8,
                 lens >= 5,
                 comonad >= 5.0,
                 mwc-random >= 0.15,
                 vector >= 0.13,
                 async >= 2.2,
                 random >= 1.2,
                 transformers >= 0.5,
                 deepseq >= 1.4,
                 data-default >= 0.7,
                 deriving-aeson >= 0.2,
                 splitmix >= 0.1,
                 aeson >= 2.1,
                 tasty >= 1.4 && < 1.5,
                 stm >= 2.5 && < 2.6,
                 QuickCheck

executable propr
  default-language: GHC2021
  main-is: src/Main.hs
  ghc-options: -threaded -O2
  other-modules: Paths_PropR
  build-depends: base >= 4 && < 5,
                 optparse-applicative >= 0.17 && < 0.18,
                 -- these are all specified in the library itself
                 containers,
                 directory,
                 ghc,
                 time,
                 data-default,
                 bytestring,
                 aeson,
                 random,
                 PropR


common testing
  default-language: GHC2021
  hs-source-dirs: tests/
  ghc-options: -threaded -O2
  other-modules: TestUtils
  build-depends: base >= 4 && < 5,
                 tasty >= 1.4,
                 tasty-hunit >= 0.10,
                 tasty-quickcheck >= 0.10,
                 tasty-expected-failure >= 0.12,
                 containers,
                 ghc,
                 hpc,
                 data-default,
                 directory,
                 PropR,
                 -- packages used in repair:
                 QuickCheck

test-suite test
  import: testing
  type: exitcode-stdio-1.0
  main-is: Tests.hs

test-suite slow-test
  import: testing
  type: exitcode-stdio-1.0
  main-is: SlowTests.hs

benchmark benchmark
  import: testing
  type: exitcode-stdio-1.0
  main-is: Benchmarks.hs
