name: ghc-synth
cabal-version: 1.24
build-type: Simple
version: 0.0.1
author: Matthías Páll Gissurarson
maintainer: mpg@mpg.is
synopsis: synthtest
description: just a test

category: Compiler Plugin
license: MIT
license-file: LICENSE


library synth
  default-language: Haskell2010
  hs-source-dirs: src/
  exposed-modules: Synth.Eval,
                   Synth.Plugin,
                   Synth.Repair,
                   Synth.Check,
                   Synth.Util
  build-depends: base >= 4 && < 5,
                 ghc >= 8 && < 9,
                 ghc-boot >= 8 && < 9,
                 ghc-paths >= 0.1 && < 0.2,
                 unix >= 2.7.2 && < 2.8

executable ghc-synth
  default-language: Haskell2010
  main-is: src/Main.hs
  ghc-options: -threaded -O2
  build-depends: base >= 4 && < 5,
                 process >= 1.6 && < 1.7,
                 containers >= 0.6 && < 0.7,
                 unix >= 2.7.2 && < 2.8,
                 ghc >= 8 && < 9,
                 synth

