name: ghc-synth
cabal-version: 1.24
build-type: Simple
version: 0.0.1
author: Matthías Páll Gissurarson
maintainer: mpg@mpg.is
synopsis: synthtest
description: Program repair using GHC, HPC tracing and typed-hole synthesis.

category: Compiler Plugin
license: MIT
license-file: LICENSE


library synth
  default-language: Haskell2010
  hs-source-dirs: src/
  exposed-modules: Synth.Eval,
                   Synth.Plugin,
                   Synth.Repair,
                   Synth.Check,
                   Synth.Fill,
                   Synth.Replace,
                   Synth.Flatten,
                   Synth.Sanctify,
                   Synth.Types,
                   Synth.Diff,
                   Synth.Util
  build-depends: base >= 4 && < 5,
                 ghc >= 8 && < 9,
                 ghc-boot >= 8 && < 9,
                 ghc-paths >= 0.1 && < 0.2,
                 ghc-prim >= 0.6 && < 0.7,
                 hpc >= 0.6 && < 0.7,
                 time >= 1.9 && < 1.10,
                 directory >= 1.3 && < 1.4,
                 filepath >= 1.4 && < 1.5,
                 process >= 1.6 && < 1.7,
                 containers >= 0.6 && < 0.7,
                 unix >= 2.7.2 && < 2.8

executable ghc-synth
  default-language: Haskell2010
  main-is: src/Main.hs
  ghc-options: -threaded -O2
  build-depends: base >= 4 && < 5,
                 process >= 1.6 && < 1.7,
                 containers >= 0.6 && < 0.7,
                 unix >= 2.7.2 && < 2.8,
                 hpc >= 0.6 && < 0.7,
                 ghc >= 8 && < 9,
                 synth

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests/
  ghc-options: -threaded -O2
  main-is: Tests.hs
  build-depends: base >= 4 && < 5,
                 tasty >= 1.4,
                 tasty-hunit >= 0.10,
                 tasty-quickcheck >= 0.10,
                 tasty-expected-failure >= 0.12,
                 containers >= 0.6 && < 0.7,
                 ghc >= 8 && < 9,
                 hpc >= 0.6 && < 0.7,
                 synth,
                 -- packages used in repair:
                 QuickCheck
