name: check-helpers
cabal-version: 1.24
build-type: Simple
version: 0.0.4
category: Compiler Plugin
license: MIT
license-file: LICENSE

library
  default-language: Haskell2010
  ghc-options: -O2
  hs-source-dirs: ./
  exposed-modules: Check.Helpers
  build-depends: base >= 4 && < 5,
                 tasty >= 1.4 && < 1.5,
                 containers >= 0.6 && < 0.7,
                 stm >= 2.5 && < 2.6,
                 QuickCheck
